[package]
name = "edifm"
version = "0.0.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crossbeam = "0.7"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
lame = "0.1"
minimp3 = { git = "https://github.com/charliesome/minimp3-rs", branch = "reader-accessors" }
rand = "0.6"
signal-hook = "0.1"
num-rational = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
